src/snapshots/tptp__fof__tests__fof_defined_atomic_formula.snap
---
source: src/fof.rs
expression: parsed
---
Plain(
    DefinedPlainFormula(
        Constant(
            DefinedConstant(
                DefinedFunctor(
                    AtomicDefinedWord(
                        DollarWord(
                            LowerWord(
                                "true",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
