src/snapshots/tptp__fof__tests__fof_defined_atomic_term.snap
---
source: src/fof.rs
expression: parsed
---
DefinedAtomicTerm(
    Constant(
        DefinedConstant(
            DefinedFunctor(
                AtomicDefinedWord(
                    DollarWord(
                        LowerWord(
                            "defined_atomic_term",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
