src/snapshots/tptp__fof__tests__fof_defined_plain_formula.snap
---
source: src/fof.rs
expression: parsed
---
DefinedPlainFormula(
    Constant(
        DefinedConstant(
            DefinedFunctor(
                AtomicDefinedWord(
                    DollarWord(
                        LowerWord(
                            "defined_plain_formula",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
