src/snapshots/tptp__fof__tests__fof_defined_plain_term-3.snap
---
source: src/fof.rs
expression: parsed
---
Function(
    DefinedFunctor(
        AtomicDefinedWord(
            DollarWord(
                LowerWord(
                    "f",
                ),
            ),
        ),
    ),
    Arguments(
        [
            Variable(
                Variable(
                    UpperWord(
                        "X",
                    ),
                ),
            ),
        ],
    ),
)
