src/snapshots/tptp__fof__tests__fof_defined_plain_term.snap
---
source: src/fof.rs
expression: parsed
---
Constant(
    DefinedConstant(
        DefinedFunctor(
            AtomicDefinedWord(
                DollarWord(
                    LowerWord(
                        "c",
                    ),
                ),
            ),
        ),
    ),
)
