src/snapshots/tptp__fof__tests__fof_defined_term-3.snap
---
source: src/fof.rs
expression: parsed
---
Defined(
    Number(
        Integer(
            Integer(
                "-123",
            ),
        ),
    ),
)
