src/snapshots/tptp__fof__tests__fof_defined_term.snap
---
source: src/fof.rs
expression: parsed
---
Atomic(
    DefinedAtomicTerm(
        Constant(
            DefinedConstant(
                DefinedFunctor(
                    AtomicDefinedWord(
                        DollarWord(
                            LowerWord(
                                "defined_term",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
